--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,16 @@
+body {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+html {
+  overflow: hidden;
+}
+:root {
+  --primary: #6cb86a;
+}
+
 body::-webkit-scrollbar {
   width: 1rem;
 }
