--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,28 @@
 body {
   height: 100vh;
   overflow-y: scroll;
-  scroll-snap-type: y mandatory;
+  /* scroll-snap-type: y mandatory; */
+}
+@media screen and (max-width: 1300px) {
+  :root {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  :root {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  :root {
+    font-size: 10px;
+  }
 }
 
 html {
   overflow: hidden;
 }
+
 :root {
   --primary: #6cb86a;
 }
