--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -10,9 +10,12 @@
 
 .row {
   scroll-snap-align: center;
-  height: 90vh;
+  height: fit-content;
+  padding: 2rem 0;
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .row-enter {
@@ -32,7 +35,7 @@
 
 .image_use_case {
   transition: all 250ms;
-  width: 450px;
+  width: 100%;
   aspect-ratio: 1.5;
   padding: 2rem;
 }
