--- a/src/views/ProductPage/ProductPage.module.css
+++ b/src/views/ProductPage/ProductPage.module.css
@@ -1,6 +1,6 @@
 .image {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   transition: all 250ms;
 }
 
@@ -20,6 +20,7 @@
 
 .infoContainer {
   display: flex;
+  margin: 0 auto;
   flex-direction: column;
   justify-content: space-between;
   gap: 1rem;
